# MOTH

./: .gitignore  .readthedocs.yaml  DOCKERFILE  DevDockerfile  Dockerfile  Paper.md  README.md  first_steps.ipynb  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  test_class.ipynb  tile_class.py
docs/source/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
moth/: __init__.py  projects.py
mothi/: __init__.py  projects.py  tiling_projects.py  utils.py
paper/: create_rois.groovy  custom_project.py  groovy_vs_mothi.ipynb  moth.ipynb  moth_data.json  times.py
paper/comparison_groovy/: create_compproject_rois.groovy  custom_comparison_project.py  export_annotations.groovy  groovy_vs_mothi.ipynb
paper/moth/: moth.ipynb
paper/times/: custom_times_project.py  export_annotations.groovy  moth.ipynb  times.py
qp_tiling/: tile_class.py
test/: expected_masks.pkl  test_tile_class.py  test_tile_class_new.py
test/test_projects/: create_qp_project.ipynb  test_annotations.pkl
test/test_projects/qp_project/: project.qpproj  project.qpproj.backup
test/test_projects/qp_project/classifiers/: classes.json
test/test_projects/qp_project/data/1/: data.qpdata  server.json  summary.json
workflow/: create_dataset.py  datasets.py  example_create_dataset.py  example_import_predictions.py  manually_test_qp_classes.ipynb  saved_tile_dataset.py
workflow/src/: create_dataset.py  dataset.py  datasets.py  manually_test_qp_classes.ipynb  on_the_fly_dataset.py
