[build-system]
requires = [
  "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mothi"
version = "0.0.1"
authors = [
  { name="Thomas Kauer" },
  { name="Jannik Sehring, M.Sc." },
  { name="Dr. Daniel Amsel" }
]
description = "mothi example"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  'paquo>=0.7,<0.8',
  'rasterio<=1.3,<1.4',
  'tiffslide>=2.4,<2.5',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.urls]
"Homepage" = "https://github.com/thkauer/GBM_QuPath_tiles"

[tool.setuptools]
packages=["mothi"]