[build-system]
requires = [
  "setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mothi"
version = "0.0.1"
authors = [
  { name="Thomas Kauer" },
  { name="Jannik Sehring, M.Sc." },
  { name="Dr. Daniel Amsel" }
]
description = "mothi example"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  'paquo>=0.7,<0.8',
  'rasterio>=1.3,<1.4',
  'tiffslide>=2.1,<2.2',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.optional-dependencies]
docs = [
  "Sphinx>=7.3,<7.4",
  "sphinx-rtd-theme>=2.0,<2.1",
  "sphinx-autodoc-typehints>=2.2,<2.3",
]

[project.urls]
"Homepage" = "https://github.com/thkauer/GBM_QuPath_tiles"

[tool.setuptools]
packages=["mothi"]